fix(asteroid list): add row-gap for grid-elements

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -67,6 +67,7 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  row-gap: 32px;
 }
 
 @media screen and (max-width: 790px) {
